<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbarAlwaysDrawVerticalTrack="true">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".MovieDetails">

        <TextView
            android:id="@+id/movieDetailsMovieTitle"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_gravity="center"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:text="@string/title_activity_movie_details"
            android:textSize="35sp" />

        <ImageView
            android:id="@+id/movieDetailsPoster"
            android:layout_width="150dp"
            android:layout_height="200dp"
            android:layout_gravity="center"
            android:src="@android:drawable/btn_star" />

        <Button
            android:id="@+id/movieDetailsTrailerButton"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="Trailer" />

        <TextView
            android:id="@+id/movieDetailsReleaseYearLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="8dp"
            android:text="@string/movieDetailsReleaseYearLabel"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/movieDetailsReleaseYear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="Release year"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/movieDetailsPlotLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="8dp"
            android:text="@string/movieDetailsPlotLabel"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/movieDetailsPlotDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:text="Plot"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/movieDetailsDirectorLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="8dp"
            android:text="@string/movieDetailsDirectorLabel"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/movieDetailsDirector"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="Director"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/movieDetailsMainActorsLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="8dp"
            android:text="@string/movieDetailsMainActorsLabel"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/movieDetailsMainActors"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:text="Main actors"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/movieDetailsReviewsLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:text="Reviews"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/movieDetailsReviews"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:text="Review"
            android:textSize="18sp"
            />

    </LinearLayout>
</ScrollView>